version/0.12/_sources/examples/Taylor_Bar/plot_taylor_bar.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/Taylor_Bar/plot_taylor_bar.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_Taylor_Bar_plot_taylor_bar.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_Taylor_Bar_plot_taylor_bar.py:


Taylor bar example
------------------
This example is inspired by the “Taylor Bar” example on the
`LS-DYNA Knowledge Base <_ls_dyna_knowledge_base>`_ site. It shows how
to use PyDyna to create a keyword file for LS-DYNA and solve it within
a Pythonic environment.

.. LINKS AND REFERENCES
.. _ls_dyna_knowledge_base: https://lsdyna.ansys.com/knowledge-base/

.. GENERATED FROM PYTHON SOURCE LINES 36-39

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Import required packages, including those for the keywords, deck, and solver.

.. GENERATED FROM PYTHON SOURCE LINES 39-60

.. code-block:: Python



    import os
    import pathlib
    import shutil
    import tempfile

    import ansys.dpf.core as dpf
    import matplotlib.pyplot as plt

    from ansys.dyna.core import Deck, keywords as kwd
    from ansys.dyna.core.run import run_dyna
    from ansys.dyna.core.utils.download_utilities import EXAMPLES_PATH, download_manager

    workdir = tempfile.TemporaryDirectory()

    mesh_file_name = "taylor_bar_mesh.k"
    mesh_file = download_manager.download_file(
        mesh_file_name, "ls-dyna/Taylor_Bar", destination=os.path.join(EXAMPLES_PATH, "Taylor_Bar")
    )








.. GENERATED FROM PYTHON SOURCE LINES 62-66

Create a deck and keywords
~~~~~~~~~~~~~~~~~~~~~~~~~~
Create a deck, which is the container for all the keywords.
Then, create and append individual keywords to the deck.

.. GENERATED FROM PYTHON SOURCE LINES 66-170

.. code-block:: Python



    def create_input_deck(initial_velocity):
        deck = Deck()
        deck.title = "Taylor-Bar Velocity - %s - Unit: t-mm-s" % initial_velocity

        # Define material
        mat_1 = kwd.Mat003(mid=1)
        mat_1.ro = 7.85000e-9
        mat_1.e = 150000.0
        mat_1.pr = 0.34
        mat_1.sigy = 390.0
        mat_1.etan = 90.0

        # Define section
        sec_1 = kwd.SectionSolid(secid=1)
        sec_1.elform = 1

        # Define part
        part_1 = kwd.Part(pid=1, mid=mat_1.mid, secid=sec_1.secid)

        # Define coordinate system
        cs_1 = kwd.DefineCoordinateSystem(cid=1)
        cs_1.xl = 1.0
        cs_1.yp = 1.0

        # Define initial velocity
        init_vel = kwd.InitialVelocityGeneration()
        init_vel.id = part_1.parts["pid"][0]
        init_vel.styp = 2
        init_vel.vy = initial_velocity
        init_vel.icid = cs_1.cid

        # Define box for node set
        box_1 = kwd.DefineBox(boxid=1, xmn=-500, xmx=500, ymn=39.0, ymx=40.1, zmn=-500, zmx=500)

        # Create node set
        set_node_1 = kwd.SetNodeGeneral()
        set_node_1.sid = 1
        set_node_1.option = "BOX"
        set_node_1.e1 = box_1.boxid

        # Define rigid wall
        rw = kwd.RigidwallPlanar(id=1)
        rw.nsid = set_node_1.sid
        rw.yt = box_1.ymx
        rw.yh = box_1.ymn

        # Define control termination
        control_term = kwd.ControlTermination(endtim=8.00000e-5, dtmin=0.001)

        # Define database cards
        deck_dt_out = 8.00000e-8
        deck_glstat = kwd.DatabaseGlstat(dt=deck_dt_out, binary=3)
        deck_matsum = kwd.DatabaseMatsum(dt=deck_dt_out, binary=3)
        deck_nodout = kwd.DatabaseNodout(dt=deck_dt_out, binary=3)
        deck_elout = kwd.DatabaseElout(dt=deck_dt_out, binary=3)
        deck_rwforc = kwd.DatabaseRwforc(dt=deck_dt_out, binary=3)
        deck_d3plot = kwd.DatabaseBinaryD3Plot(dt=4.00000e-6)

        # Define deck history node
        deck_hist_node_1 = kwd.DatabaseHistoryNodeSet()
        deck_hist_node_1.id1 = set_node_1.sid

        # Append all cards to input deck
        deck.extend(
            [
                deck_glstat,
                deck_matsum,
                deck_nodout,
                deck_elout,
                deck_rwforc,
                deck_d3plot,
                set_node_1,
                control_term,
                rw,
                box_1,
                init_vel,
                cs_1,
                part_1,
                mat_1,
                sec_1,
                deck_hist_node_1,
            ]
        )

        return deck


    def write_input_deck(**kwargs):
        initial_velocity = kwargs.get("initial_velocity")
        wd = kwargs.get("wd")
        if not all((initial_velocity, wd)):
            raise Exception("Missing input!")
        deck = create_input_deck(initial_velocity)
        # Import mesh
        deck.append(kwd.Include(filename=mesh_file_name))

        # Write LS-DYNA input deck
        os.makedirs(wd, exist_ok=True)
        deck.export_file(os.path.join(wd, "input.k"))
        shutil.copyfile(mesh_file, os.path.join(wd, mesh_file_name))









.. GENERATED FROM PYTHON SOURCE LINES 171-174

Define the Dyna solver function
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 174-181

.. code-block:: Python



    def run(directory):
        run_dyna("input.k", working_directory=directory, stream=False)
        assert os.path.isfile(os.path.join(directory, "d3plot")), "No result file found"









.. GENERATED FROM PYTHON SOURCE LINES 182-185

Define the DPF output function
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 185-204

.. code-block:: Python



    def get_global_ke(directory):
        ds = dpf.DataSources()
        result_file = os.path.join(directory, "d3plot")
        assert os.path.isfile(result_file)
        ds.set_result_file_path(result_file, "d3plot")
        model = dpf.Model(ds)

        gke_op = dpf.operators.result.global_kinetic_energy()
        gke_op.inputs.data_sources.connect(ds)
        gke = gke_op.eval()
        field = gke.get_field(0)
        ke_data = field.data

        time_data = model.metadata.time_freq_support.time_frequencies.data_as_list
        return time_data, ke_data









.. GENERATED FROM PYTHON SOURCE LINES 205-208

View the model
~~~~~~~~~~~~~~
etc etc

.. GENERATED FROM PYTHON SOURCE LINES 208-212

.. code-block:: Python

    deck_for_graphic = create_input_deck(300e3)
    deck_for_graphic.append(kwd.Include(filename=mesh_file))
    deck_for_graphic.plot()




.. image-sg:: /examples/Taylor_Bar/images/sphx_glr_plot_taylor_bar_001.png
   :alt: plot taylor bar
   :srcset: /examples/Taylor_Bar/images/sphx_glr_plot_taylor_bar_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/pydyna/pydyna/.venv/lib/python3.13/site-packages/ansys/dyna/core/lib/deck_plotter.py:567: PyVistaFutureWarning: The default value of `algorithm` for the filter
    `UnstructuredGrid.extract_surface` will change in the future. It currently defaults to
    `'dataset_surface'`, but will change to `None`. Explicitly set the `algorithm` keyword to
    silence this warning.
      plot_data = plot_data.extract_surface()




.. GENERATED FROM PYTHON SOURCE LINES 213-216

Run a parametric solve
~~~~~~~~~~~~~~~~~~~~~~
etc etc

.. GENERATED FROM PYTHON SOURCE LINES 216-240

.. code-block:: Python



    # Define base working directory

    color = ["b", "r", "g", "y"]
    # Specify different velocities in mm/s
    initial_velocities = [275.0e3, 300.0e3, 325.0e3, 350.0e3]

    for index, initial_velocity in enumerate(initial_velocities):
        # Create a folder for each parameter
        wd = os.path.join(workdir.name, "tb_vel_%s" % initial_velocity)
        pathlib.Path(wd).mkdir(exist_ok=True)
        # Create LS-Dyna input deck
        write_input_deck(initial_velocity=initial_velocity, wd=wd)
        # Run Solver
        run(wd)
        # Run PyDPF Post
        time_data, ke_data = get_global_ke(wd)
        # Add series to the plot
        plt.plot(time_data, ke_data, color[index], label="KE at vel. %s mm/s" % initial_velocity)

    plt.xlabel("Time (s)")
    plt.ylabel("Energy (mJ)")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     License option : check ansys licenses only


     ***************************************************************
     *            ANSYS LEGAL NOTICES                              *
     ***************************************************************
     *                                                             *
     * Copyright 1971-2025 ANSYS, Inc.  All rights reserved.       *
     * Unauthorized use, distribution or duplication is            *
     * prohibited.                                                 *
     *                                                             *
     * Ansys is a registered trademark of ANSYS, Inc. or its       *
     * subsidiaries in the United States or other countries.       *
     * See the ANSYS, Inc. online documentation or the ANSYS, Inc. *
     * documentation CD or online help for the complete Legal      *
     * Notice.                                                     *
     *                                                             *
     ***************************************************************
     *                                                             *
     * THIS ANSYS SOFTWARE PRODUCT AND PROGRAM DOCUMENTATION       *
     * INCLUDE TRADE SECRETS AND CONFIDENTIAL AND PROPRIETARY      *
     * PRODUCTS OF ANSYS, INC., ITS SUBSIDIARIES, OR LICENSORS.    *
     * The software products and documentation are furnished by    *
     * ANSYS, Inc. or its subsidiaries under a software license    *
     * agreement that contains provisions concerning               *
     * non-disclosure, copying, length and nature of use,          *
     * compliance with exporting laws, warranties, disclaimers,    *
     * limitations of liability, and remedies, and other           *
     * provisions.  The software products and documentation may be *
     * used, disclosed, transferred, or copied only in accordance  *
     * with the terms and conditions of that software license      *
     * agreement.                                                  *
     *                                                             *
     * ANSYS, Inc. is a UL registered                              *
     * ISO 9001:2015 company.                                      *
     *                                                             *
     ***************************************************************
     *                                                             *
     * This product is subject to U.S. laws governing export and   *
     * re-export.                                                  *
     *                                                             *
     * For U.S. Government users, except as specifically granted   *
     * by the ANSYS, Inc. software license agreement, the use,     *
     * duplication, or disclosure by the United States Government  *
     * is subject to restrictions stated in the ANSYS, Inc.        *
     * software license agreement and FAR 12.212 (for non-DOD      *
     * licenses).                                                  *
     *                                                             *
     ***************************************************************

          Date: 05/18/2026      Time: 15:23:20  
          ___________________________________________________ 
         |                                                   |
         |  LS-DYNA, A Program for Nonlinear Dynamic         |
         |  Analysis of Structures in Three Dimensions       |
         |  Date    : 10/01/2025    Time: 13:03:42           |
         |  Version : smp d R16                              |
         |  Revision: R16.1.1-20-g0c90cad538                 |
         |  AnLicVer: 2025 R2 (20250506+dl-73-g4dde854)      |
         |                                                   |
         |  Features enabled in this version:                |
         |    Shared Memory Parallel                         |
         |    CESE CHEMISTRY EM ICFD STOCHASTIC_PARTICLES    |
         |    FFTW (multi-dimensional FFTW Library)          |
         |    ARPACK (nonsymmetric eigensolver library)      |
         |    ANSYSLIC enabled                               |
         |                                                   |
         |  Platform   : Xeon64 System                       |
         |  OS Level   : Linux 3.10.0 uum                    |
         |  Compiler   : Intel Fortran Compiler 19.0 SSE2    |
         |  Hostname   : 8d802c71ae5c                        |
         |  Precision  : Double precision (I8R8)             |
         |                                                   |
         |  Unauthorized use infringes Ansys Inc. copyrights |
         |___________________________________________________|

     > i=input.k memory=20m
    Messages file /ansys_inc/v252/licensingclient/language/en-us/ansysli_msgs.xml does not exist.
    [license/info] Successfully checked out 1 of "dyna_solver_core".
    [license/info] --> Checkout ID: 8d802c71ae5c-root-13-000003 (days left: 246)
    [license/info] --> Customer ID: 0
    [license/info] Successfully started "LSDYNA (Core-based License)".

     Executing with ANSYS license

     Command line options: i=input.k 
                           memory=20m

     Input file: input.k                                                                         

     The native file format       : 64-bit small endian
     Memory size from command line:    20000000

     on UNIX computers note the following change:

     ctrl-c interrupts ls-dyna and prompts for a sense  switch.
     type the desired sense switch: sw1., sw2., etc. to continue
     the execution.  ls-dyna will respond as explained in the users manual

        type                      response
       -----   ------------------------------------------------------------
       quit    ls-dyna terminates.
       stop    ls-dyna terminates.
       sw1.    a restart file is written and ls-dyna terminates.
       sw2.    ls-dyna responds with time and cycle numbers.    
       sw3.    a restart file is written and ls-dyna continues calculations.
       sw4.    a plot state is written and ls-dyna continues calculations.
       sw5.    ls-dyna enters interactive graphics phase.
       swa.    ls-dyna flushes all output i/o buffers.
       swb.    a dynain is written and ls-dyna continues calculations.
       swc.    a restart and dynain are written and ls-dyna continues calculations.
       swd.    a restart and dynain are written and ls-dyna terminates.
       swe.    stop dynamic relaxation just as though convergence
       endtime=time change the termination time
       lpri    toggle implicit lin. alg. solver output on/off.
       nlpr    toggle implicit nonlinear solver output on/off.
       iter    toggle implicit output to d3iter database on/off.
       prof    output timing data to messag and continue.
       conv    force implicit nonlinear convergence for current time step.
       ttrm    terminate implicit time step, reduce time step, retry time step.
       rtrm    terminate implicit at end of current time step.


     ********  notice  ********  notice  ********  notice  ********
     *                                                            *
     * This is the LS-DYNA Finite Element code.                   *
     *                                                            *
     * Neither LST nor the authors assume any responsibility for  *
     * the validity, accuracy, or applicability of any results    *
     * obtained from this system. Users must verify their own     *
     * results.                                                   *
     *                                                            *
     * LST endeavors to make the LS-DYNA code as complete,        *
     * accurate and easy to use as possible.                      *
     * Suggestions and comments are welcomed.  Please report any  *
     * errors encountered in either the documentation or results  *
     * immediately to LST through your site focus.                *
     *                                                            *
     * Copyright (C) 1990-2021                                    *
     * by Livermore Software Technology, LLC                      *
     * All rights reserved                                        *
     *                                                            *
     ********  notice  ********  notice  ********  notice  ********

     Beginning of keyword reader                                   05/18/26 15:23:28

                                                                   05/18/26 15:23:28
     Open include file: taylor_bar_mesh.k

     Memory required to process keyword     :     195795  
     Additional dynamic memory required     :    2200515  


     input of data is completed

     initial kinetic energy = 0.11118392E+06

     Memory required to begin solution      :     196K
     Additional dynamically allocated memory:    2257K
                                       Total:    2453K

     initialization completed
           1 t 0.0000E+00 dt 6.72E-08 flush i/o buffers            05/18/26 15:23:28
           1 t 0.0000E+00 dt 6.72E-08 write d3plot file            05/18/26 15:23:28
     cpu time per zone cycle............       812 nanoseconds
     average cpu time per zone cycle....       896 nanoseconds
     average clock time per zone cycle..      1145 nanoseconds

     estimated total cpu time          =         0 sec (       0 hrs  0 mins)
     estimated cpu time to complete    =         0 sec (       0 hrs  0 mins)
     estimated total clock time        =         8 sec (       0 hrs  0 mins)
     estimated clock time to complete  =         1 sec (       0 hrs  0 mins)
     termination time                  = 8.000E-05
          60 t 3.9547E-06 dt 6.71E-08 write d3plot file            05/18/26 15:23:28
         136 t 7.9703E-06 dt 3.83E-08 write d3plot file            05/18/26 15:23:28
         272 t 1.1990E-05 dt 2.37E-08 write d3plot file            05/18/26 15:23:28
         493 t 1.5998E-05 dt 1.53E-08 write d3plot file            05/18/26 15:23:28
         812 t 1.9999E-05 dt 1.10E-08 write d3plot file            05/18/26 15:23:28
        1234 t 2.3997E-05 dt 8.71E-09 write d3plot file            05/18/26 15:23:28
        1734 t 2.7997E-05 dt 7.45E-09 write d3plot file            05/18/26 15:23:29
        2302 t 3.1995E-05 dt 6.80E-09 write d3plot file            05/18/26 15:23:29
        2905 t 3.5998E-05 dt 6.54E-09 write d3plot file            05/18/26 15:23:29
        3526 t 3.9999E-05 dt 6.52E-09 write d3plot file            05/18/26 15:23:29
        4157 t 4.4000E-05 dt 6.15E-09 write d3plot file            05/18/26 15:23:29
        4807 t 4.7995E-05 dt 6.15E-09 write d3plot file            05/18/26 15:23:29
        5000 t 4.9198E-05 dt 6.53E-09 flush i/o buffers            05/18/26 15:23:29
        5450 t 5.1999E-05 dt 6.15E-09 write d3plot file            05/18/26 15:23:29
        6095 t 5.5999E-05 dt 6.15E-09 write d3plot file            05/18/26 15:23:30
        6722 t 5.9997E-05 dt 6.15E-09 write d3plot file            05/18/26 15:23:30
        7340 t 6.3996E-05 dt 6.53E-09 write d3plot file            05/18/26 15:23:30
        7963 t 6.7995E-05 dt 6.53E-09 write d3plot file            05/18/26 15:23:30
        8579 t 7.1994E-05 dt 6.16E-09 write d3plot file            05/18/26 15:23:30
        9223 t 7.5998E-05 dt 6.57E-09 write d3plot file            05/18/26 15:23:30
        9835 t 7.9994E-05 dt 6.57E-09 write d3plot file            05/18/26 15:23:31
 
     *** termination time reached ***
        9835 t 8.0001E-05 dt 6.57E-09 write d3dump01 file          05/18/26 15:23:31
        9835 t 8.0001E-05 dt 6.57E-09 write d3plot file            05/18/26 15:23:31

     N o r m a l    t e r m i n a t i o n                          05/18/26 15:23:31

     Memory required to complete solution   :     196K
     Additional dynamically allocated memory:    2689K
                                       Total:    2884K

     T i m i n g   i n f o r m a t i o n
                            CPU(seconds)   %CPU  Clock(seconds) %Clock
      ----------------------------------------------------------------
      Keyword Processing ... 1.3939E-02    0.50     1.3941E-02    0.13
        KW Reading ......... 5.6226E-03    0.20     5.6230E-03    0.05
        KW Writing ......... 2.6356E-03    0.10     2.6360E-03    0.03
      Initialization ....... 1.1245E-01    4.06     7.6884E+00   74.26
        Init Proc Phase 1 .. 5.4948E-02    1.99     5.6445E-02    0.55
        Init Proc Phase 2 .. 1.1011E-03    0.04     2.3800E-03    0.02
      Init solver .......... 5.2688E-05    0.00     5.3000E-05    0.00
      Element processing ... 1.7995E+00   65.03     1.7994E+00   17.38
        Solids ............. 1.7236E+00   62.29     1.7212E+00   16.62
        Shells ............. 2.2480E-02    0.81     2.4768E-02    0.24
        ISO Shells ......... 7.0541E-03    0.25     6.9470E-03    0.07
        E Other ............ 3.4395E-02    1.24     3.4115E-02    0.33
      Binary databases ..... 1.3126E-02    0.47     1.3256E-02    0.13
      ASCII database ....... 3.8976E-01   14.09     3.8942E-01    3.76
      Contact algorithm .... 1.7869E-02    0.65     1.7977E-02    0.17
      Rigid Bodies ......... 3.4235E-02    1.24     3.4307E-02    0.33
        Mass Scaling ....... 8.7467E-03    0.32     8.6920E-03    0.08
        Update nodes ....... 7.5823E-03    0.27     7.5560E-03    0.07
      Time step size ....... 9.4047E-03    0.34     9.4050E-03    0.09
      Rigid wall ........... 3.5638E-02    1.29     3.4814E-02    0.34
      Group force file ..... 7.9727E-03    0.29     8.2160E-03    0.08
      Others ............... 2.1860E-02    0.79     2.1776E-02    0.21
      Misc. 1 .............. 1.6376E-01    5.92     1.7346E-01    1.68
        Scale Masses ....... 7.4385E-03    0.27     7.5270E-03    0.07
        Force Constraints .. 7.3062E-03    0.26     7.3440E-03    0.07
        Force to Accel ..... 3.6048E-02    1.30     3.5531E-02    0.34
      Misc. 2 .............. 7.8057E-02    2.82     7.7817E-02    0.75
        Geometry Update .... 5.1143E-02    1.85     5.0311E-02    0.49
      Misc. 3 .............. 1.6347E-02    0.59     1.8013E-02    0.17
      Misc. 4 .............. 5.3000E-02    1.92     5.3266E-02    0.51
        Timestep Init ...... 2.3777E-02    0.86     2.3390E-02    0.23
        Apply Loads ........ 1.3384E-02    0.48     1.3405E-02    0.13
      ----------------------------------------------------------------
      T o t a l s            2.7669E+00  100.00     1.0354E+01  100.00

     Problem time       =    8.0001E-05
     Problem cycle      =      9835
     Total CPU time     =         3 seconds (   0 hours  0 minutes  3 seconds)
     CPU time per zone cycle  =        349.135 nanoseconds
     Clock time per zone cycle=        350.546 nanoseconds

     Number of CPU's    1
     NLQ used/max     192/  192
     Start time   05/18/2026 15:23:28  
     End time     05/18/2026 15:23:31  
     Elapsed time       3 seconds for    9835 cycles using  1 SMP thread 
                 (      0 hour   0 minute   3 seconds)

     N o r m a l    t e r m i n a t i o n                          05/18/26 15:23:31
     License option : check ansys licenses only


     ***************************************************************
     *            ANSYS LEGAL NOTICES                              *
     ***************************************************************
     *                                                             *
     * Copyright 1971-2025 ANSYS, Inc.  All rights reserved.       *
     * Unauthorized use, distribution or duplication is            *
     * prohibited.                                                 *
     *                                                             *
     * Ansys is a registered trademark of ANSYS, Inc. or its       *
     * subsidiaries in the United States or other countries.       *
     * See the ANSYS, Inc. online documentation or the ANSYS, Inc. *
     * documentation CD or online help for the complete Legal      *
     * Notice.                                                     *
     *                                                             *
     ***************************************************************
     *                                                             *
     * THIS ANSYS SOFTWARE PRODUCT AND PROGRAM DOCUMENTATION       *
     * INCLUDE TRADE SECRETS AND CONFIDENTIAL AND PROPRIETARY      *
     * PRODUCTS OF ANSYS, INC., ITS SUBSIDIARIES, OR LICENSORS.    *
     * The software products and documentation are furnished by    *
     * ANSYS, Inc. or its subsidiaries under a software license    *
     * agreement that contains provisions concerning               *
     * non-disclosure, copying, length and nature of use,          *
     * compliance with exporting laws, warranties, disclaimers,    *
     * limitations of liability, and remedies, and other           *
     * provisions.  The software products and documentation may be *
     * used, disclosed, transferred, or copied only in accordance  *
     * with the terms and conditions of that software license      *
     * agreement.                                                  *
     *                                                             *
     * ANSYS, Inc. is a UL registered                              *
     * ISO 9001:2015 company.                                      *
     *                                                             *
     ***************************************************************
     *                                                             *
     * This product is subject to U.S. laws governing export and   *
     * re-export.                                                  *
     *                                                             *
     * For U.S. Government users, except as specifically granted   *
     * by the ANSYS, Inc. software license agreement, the use,     *
     * duplication, or disclosure by the United States Government  *
     * is subject to restrictions stated in the ANSYS, Inc.        *
     * software license agreement and FAR 12.212 (for non-DOD      *
     * licenses).                                                  *
     *                                                             *
     ***************************************************************

          Date: 05/18/2026      Time: 15:23:53  
          ___________________________________________________ 
         |                                                   |
         |  LS-DYNA, A Program for Nonlinear Dynamic         |
         |  Analysis of Structures in Three Dimensions       |
         |  Date    : 10/01/2025    Time: 13:03:42           |
         |  Version : smp d R16                              |
         |  Revision: R16.1.1-20-g0c90cad538                 |
         |  AnLicVer: 2025 R2 (20250506+dl-73-g4dde854)      |
         |                                                   |
         |  Features enabled in this version:                |
         |    Shared Memory Parallel                         |
         |    CESE CHEMISTRY EM ICFD STOCHASTIC_PARTICLES    |
         |    FFTW (multi-dimensional FFTW Library)          |
         |    ARPACK (nonsymmetric eigensolver library)      |
         |    ANSYSLIC enabled                               |
         |                                                   |
         |  Platform   : Xeon64 System                       |
         |  OS Level   : Linux 3.10.0 uum                    |
         |  Compiler   : Intel Fortran Compiler 19.0 SSE2    |
         |  Hostname   : a0cf0224513a                        |
         |  Precision  : Double precision (I8R8)             |
         |                                                   |
         |  Unauthorized use infringes Ansys Inc. copyrights |
         |___________________________________________________|

     > i=input.k memory=20m
    Messages file /ansys_inc/v252/licensingclient/language/en-us/ansysli_msgs.xml does not exist.
    [license/info] Successfully checked out 1 of "dyna_solver_core".
    [license/info] --> Checkout ID: a0cf0224513a-root-13-000003 (days left: 246)
    [license/info] --> Customer ID: 0
    [license/info] Successfully started "LSDYNA (Core-based License)".

     Executing with ANSYS license

     Command line options: i=input.k 
                           memory=20m

     Input file: input.k                                                                         

     The native file format       : 64-bit small endian
     Memory size from command line:    20000000

     on UNIX computers note the following change:

     ctrl-c interrupts ls-dyna and prompts for a sense  switch.
     type the desired sense switch: sw1., sw2., etc. to continue
     the execution.  ls-dyna will respond as explained in the users manual

        type                      response
       -----   ------------------------------------------------------------
       quit    ls-dyna terminates.
       stop    ls-dyna terminates.
       sw1.    a restart file is written and ls-dyna terminates.
       sw2.    ls-dyna responds with time and cycle numbers.    
       sw3.    a restart file is written and ls-dyna continues calculations.
       sw4.    a plot state is written and ls-dyna continues calculations.
       sw5.    ls-dyna enters interactive graphics phase.
       swa.    ls-dyna flushes all output i/o buffers.
       swb.    a dynain is written and ls-dyna continues calculations.
       swc.    a restart and dynain are written and ls-dyna continues calculations.
       swd.    a restart and dynain are written and ls-dyna terminates.
       swe.    stop dynamic relaxation just as though convergence
       endtime=time change the termination time
       lpri    toggle implicit lin. alg. solver output on/off.
       nlpr    toggle implicit nonlinear solver output on/off.
       iter    toggle implicit output to d3iter database on/off.
       prof    output timing data to messag and continue.
       conv    force implicit nonlinear convergence for current time step.
       ttrm    terminate implicit time step, reduce time step, retry time step.
       rtrm    terminate implicit at end of current time step.


     ********  notice  ********  notice  ********  notice  ********
     *                                                            *
     * This is the LS-DYNA Finite Element code.                   *
     *                                                            *
     * Neither LST nor the authors assume any responsibility for  *
     * the validity, accuracy, or applicability of any results    *
     * obtained from this system. Users must verify their own     *
     * results.                                                   *
     *                                                            *
     * LST endeavors to make the LS-DYNA code as complete,        *
     * accurate and easy to use as possible.                      *
     * Suggestions and comments are welcomed.  Please report any  *
     * errors encountered in either the documentation or results  *
     * immediately to LST through your site focus.                *
     *                                                            *
     * Copyright (C) 1990-2021                                    *
     * by Livermore Software Technology, LLC                      *
     * All rights reserved                                        *
     *                                                            *
     ********  notice  ********  notice  ********  notice  ********

     Beginning of keyword reader                                   05/18/26 15:24:01

                                                                   05/18/26 15:24:01
     Open include file: taylor_bar_mesh.k

     Memory required to process keyword     :     195795  
     Additional dynamic memory required     :    2200515  


     input of data is completed

     initial kinetic energy = 0.13231805E+06

     Memory required to begin solution      :     196K
     Additional dynamically allocated memory:    2257K
                                       Total:    2453K

     initialization completed
           1 t 0.0000E+00 dt 6.72E-08 flush i/o buffers            05/18/26 15:24:01
           1 t 0.0000E+00 dt 6.72E-08 write d3plot file            05/18/26 15:24:01
     cpu time per zone cycle............       804 nanoseconds
     average cpu time per zone cycle....       894 nanoseconds
     average clock time per zone cycle..      1125 nanoseconds

     estimated total cpu time          =         0 sec (       0 hrs  0 mins)
     estimated cpu time to complete    =         0 sec (       0 hrs  0 mins)
     estimated total clock time        =         8 sec (       0 hrs  0 mins)
     estimated clock time to complete  =         1 sec (       0 hrs  0 mins)
     termination time                  = 8.000E-05
          60 t 3.9564E-06 dt 6.71E-08 write d3plot file            05/18/26 15:24:01
         145 t 7.9823E-06 dt 3.30E-08 write d3plot file            05/18/26 15:24:01
         308 t 1.1998E-05 dt 1.92E-08 write d3plot file            05/18/26 15:24:01
         587 t 1.6000E-05 dt 1.18E-08 write d3plot file            05/18/26 15:24:01
        1009 t 1.9996E-05 dt 7.72E-09 write d3plot file            05/18/26 15:24:01
        1582 t 2.3999E-05 dt 6.32E-09 write d3plot file            05/18/26 15:24:01
        2293 t 2.7997E-05 dt 5.27E-09 write d3plot file            05/18/26 15:24:02
        3109 t 3.1998E-05 dt 4.69E-09 write d3plot file            05/18/26 15:24:02
        3996 t 3.5997E-05 dt 4.39E-09 write d3plot file            05/18/26 15:24:02
        4921 t 3.9998E-05 dt 4.29E-09 write d3plot file            05/18/26 15:24:02
        5000 t 4.0337E-05 dt 4.29E-09 flush i/o buffers            05/18/26 15:24:02
        5855 t 4.3996E-05 dt 4.29E-09 write d3plot file            05/18/26 15:24:02
        6806 t 4.7998E-05 dt 4.29E-09 write d3plot file            05/18/26 15:24:03
        7782 t 5.1998E-05 dt 4.04E-09 write d3plot file            05/18/26 15:24:03
        8766 t 5.5998E-05 dt 4.04E-09 write d3plot file            05/18/26 15:24:03
        9747 t 5.9999E-05 dt 4.05E-09 write d3plot file            05/18/26 15:24:03
       10000 t 6.1023E-05 dt 4.05E-09 flush i/o buffers            05/18/26 15:24:03
       10699 t 6.3996E-05 dt 4.30E-09 write d3plot file            05/18/26 15:24:04
       11643 t 6.7999E-05 dt 4.30E-09 write d3plot file            05/18/26 15:24:04
       12579 t 7.1996E-05 dt 4.30E-09 write d3plot file            05/18/26 15:24:04
       13556 t 7.6000E-05 dt 4.06E-09 write d3plot file            05/18/26 15:24:04
       14494 t 7.9998E-05 dt 4.32E-09 write d3plot file            05/18/26 15:24:05
 
     *** termination time reached ***
       14494 t 8.0002E-05 dt 4.32E-09 write d3dump01 file          05/18/26 15:24:05
       14494 t 8.0002E-05 dt 4.32E-09 write d3plot file            05/18/26 15:24:05

     N o r m a l    t e r m i n a t i o n                          05/18/26 15:24:05

     Memory required to complete solution   :     196K
     Additional dynamically allocated memory:    2689K
                                       Total:    2884K

     T i m i n g   i n f o r m a t i o n
                            CPU(seconds)   %CPU  Clock(seconds) %Clock
      ----------------------------------------------------------------
      Keyword Processing ... 1.4016E-02    0.37     1.4017E-02    0.12
        KW Reading ......... 5.5218E-03    0.15     5.5230E-03    0.05
        KW Writing ......... 2.6561E-03    0.07     2.6570E-03    0.02
      Initialization ....... 1.1182E-01    2.96     7.7591E+00   67.86
        Init Proc Phase 1 .. 5.4885E-02    1.45     5.6398E-02    0.49
        Init Proc Phase 2 .. 1.1152E-03    0.03     1.7480E-03    0.02
      Init solver .......... 6.2397E-05    0.00     6.2000E-05    0.00
      Element processing ... 2.6159E+00   69.32     2.6163E+00   22.88
        Solids ............. 2.5059E+00   66.41     2.5027E+00   21.89
        Shells ............. 3.2774E-02    0.87     3.5881E-02    0.31
        ISO Shells ......... 1.0451E-02    0.28     1.0555E-02    0.09
        E Other ............ 4.9675E-02    1.32     4.9172E-02    0.43
      Binary databases ..... 1.7486E-02    0.46     1.7571E-02    0.15
      ASCII database ....... 3.9887E-01   10.57     3.9870E-01    3.49
      Contact algorithm .... 2.5949E-02    0.69     2.6170E-02    0.23
      Rigid Bodies ......... 4.9983E-02    1.32     5.0099E-02    0.44
        Mass Scaling ....... 1.2555E-02    0.33     1.2602E-02    0.11
        Update nodes ....... 1.1226E-02    0.30     1.1288E-02    0.10
      Time step size ....... 1.3888E-02    0.37     1.3899E-02    0.12
      Rigid wall ........... 5.0755E-02    1.35     4.9524E-02    0.43
      Group force file ..... 1.1678E-02    0.31     1.1785E-02    0.10
      Others ............... 3.1175E-02    0.83     3.1059E-02    0.27
      Misc. 1 .............. 2.1867E-01    5.80     2.3246E-01    2.03
        Scale Masses ....... 1.1002E-02    0.29     1.1184E-02    0.10
        Force Constraints .. 1.0750E-02    0.28     1.0615E-02    0.09
        Force to Accel ..... 5.2980E-02    1.40     5.2521E-02    0.46
      Misc. 2 .............. 1.1514E-01    3.05     1.1488E-01    1.00
        Geometry Update .... 7.6350E-02    2.02     7.4914E-02    0.66
      Misc. 3 .............. 2.1114E-02    0.56     2.0959E-02    0.18
      Misc. 4 .............. 7.6931E-02    2.04     7.7057E-02    0.67
        Timestep Init ...... 3.4678E-02    0.92     3.3868E-02    0.30
        Apply Loads ........ 1.9033E-02    0.50     1.9314E-02    0.17
      ----------------------------------------------------------------
      T o t a l s            3.7735E+00  100.00     1.1434E+01  100.00

     Problem time       =    8.0002E-05
     Problem cycle      =     14494
     Total CPU time     =         4 seconds (   0 hours  0 minutes  4 seconds)
     CPU time per zone cycle  =        327.262 nanoseconds
     Clock time per zone cycle=        328.422 nanoseconds

     Number of CPU's    1
     NLQ used/max     192/  192
     Start time   05/18/2026 15:24:01  
     End time     05/18/2026 15:24:05  
     Elapsed time       4 seconds for   14494 cycles using  1 SMP thread 
                 (      0 hour   0 minute   4 seconds)

     N o r m a l    t e r m i n a t i o n                          05/18/26 15:24:05
     License option : check ansys licenses only


     ***************************************************************
     *            ANSYS LEGAL NOTICES                              *
     ***************************************************************
     *                                                             *
     * Copyright 1971-2025 ANSYS, Inc.  All rights reserved.       *
     * Unauthorized use, distribution or duplication is            *
     * prohibited.                                                 *
     *                                                             *
     * Ansys is a registered trademark of ANSYS, Inc. or its       *
     * subsidiaries in the United States or other countries.       *
     * See the ANSYS, Inc. online documentation or the ANSYS, Inc. *
     * documentation CD or online help for the complete Legal      *
     * Notice.                                                     *
     *                                                             *
     ***************************************************************
     *                                                             *
     * THIS ANSYS SOFTWARE PRODUCT AND PROGRAM DOCUMENTATION       *
     * INCLUDE TRADE SECRETS AND CONFIDENTIAL AND PROPRIETARY      *
     * PRODUCTS OF ANSYS, INC., ITS SUBSIDIARIES, OR LICENSORS.    *
     * The software products and documentation are furnished by    *
     * ANSYS, Inc. or its subsidiaries under a software license    *
     * agreement that contains provisions concerning               *
     * non-disclosure, copying, length and nature of use,          *
     * compliance with exporting laws, warranties, disclaimers,    *
     * limitations of liability, and remedies, and other           *
     * provisions.  The software products and documentation may be *
     * used, disclosed, transferred, or copied only in accordance  *
     * with the terms and conditions of that software license      *
     * agreement.                                                  *
     *                                                             *
     * ANSYS, Inc. is a UL registered                              *
     * ISO 9001:2015 company.                                      *
     *                                                             *
     ***************************************************************
     *                                                             *
     * This product is subject to U.S. laws governing export and   *
     * re-export.                                                  *
     *                                                             *
     * For U.S. Government users, except as specifically granted   *
     * by the ANSYS, Inc. software license agreement, the use,     *
     * duplication, or disclosure by the United States Government  *
     * is subject to restrictions stated in the ANSYS, Inc.        *
     * software license agreement and FAR 12.212 (for non-DOD      *
     * licenses).                                                  *
     *                                                             *
     ***************************************************************

          Date: 05/18/2026      Time: 15:24:27  
          ___________________________________________________ 
         |                                                   |
         |  LS-DYNA, A Program for Nonlinear Dynamic         |
         |  Analysis of Structures in Three Dimensions       |
         |  Date    : 10/01/2025    Time: 13:03:42           |
         |  Version : smp d R16                              |
         |  Revision: R16.1.1-20-g0c90cad538                 |
         |  AnLicVer: 2025 R2 (20250506+dl-73-g4dde854)      |
         |                                                   |
         |  Features enabled in this version:                |
         |    Shared Memory Parallel                         |
         |    CESE CHEMISTRY EM ICFD STOCHASTIC_PARTICLES    |
         |    FFTW (multi-dimensional FFTW Library)          |
         |    ARPACK (nonsymmetric eigensolver library)      |
         |    ANSYSLIC enabled                               |
         |                                                   |
         |  Platform   : Xeon64 System                       |
         |  OS Level   : Linux 3.10.0 uum                    |
         |  Compiler   : Intel Fortran Compiler 19.0 SSE2    |
         |  Hostname   : c6c566d2efe4                        |
         |  Precision  : Double precision (I8R8)             |
         |                                                   |
         |  Unauthorized use infringes Ansys Inc. copyrights |
         |___________________________________________________|

     > i=input.k memory=20m
    Messages file /ansys_inc/v252/licensingclient/language/en-us/ansysli_msgs.xml does not exist.
    [license/info] Successfully checked out 1 of "dyna_solver_core".
    [license/info] --> Checkout ID: c6c566d2efe4-root-13-000003 (days left: 246)
    [license/info] --> Customer ID: 0
    [license/info] Successfully started "LSDYNA (Core-based License)".

     Executing with ANSYS license

     Command line options: i=input.k 
                           memory=20m

     Input file: input.k                                                                         

     The native file format       : 64-bit small endian
     Memory size from command line:    20000000

     on UNIX computers note the following change:

     ctrl-c interrupts ls-dyna and prompts for a sense  switch.
     type the desired sense switch: sw1., sw2., etc. to continue
     the execution.  ls-dyna will respond as explained in the users manual

        type                      response
       -----   ------------------------------------------------------------
       quit    ls-dyna terminates.
       stop    ls-dyna terminates.
       sw1.    a restart file is written and ls-dyna terminates.
       sw2.    ls-dyna responds with time and cycle numbers.    
       sw3.    a restart file is written and ls-dyna continues calculations.
       sw4.    a plot state is written and ls-dyna continues calculations.
       sw5.    ls-dyna enters interactive graphics phase.
       swa.    ls-dyna flushes all output i/o buffers.
       swb.    a dynain is written and ls-dyna continues calculations.
       swc.    a restart and dynain are written and ls-dyna continues calculations.
       swd.    a restart and dynain are written and ls-dyna terminates.
       swe.    stop dynamic relaxation just as though convergence
       endtime=time change the termination time
       lpri    toggle implicit lin. alg. solver output on/off.
       nlpr    toggle implicit nonlinear solver output on/off.
       iter    toggle implicit output to d3iter database on/off.
       prof    output timing data to messag and continue.
       conv    force implicit nonlinear convergence for current time step.
       ttrm    terminate implicit time step, reduce time step, retry time step.
       rtrm    terminate implicit at end of current time step.


     ********  notice  ********  notice  ********  notice  ********
     *                                                            *
     * This is the LS-DYNA Finite Element code.                   *
     *                                                            *
     * Neither LST nor the authors assume any responsibility for  *
     * the validity, accuracy, or applicability of any results    *
     * obtained from this system. Users must verify their own     *
     * results.                                                   *
     *                                                            *
     * LST endeavors to make the LS-DYNA code as complete,        *
     * accurate and easy to use as possible.                      *
     * Suggestions and comments are welcomed.  Please report any  *
     * errors encountered in either the documentation or results  *
     * immediately to LST through your site focus.                *
     *                                                            *
     * Copyright (C) 1990-2021                                    *
     * by Livermore Software Technology, LLC                      *
     * All rights reserved                                        *
     *                                                            *
     ********  notice  ********  notice  ********  notice  ********

     Beginning of keyword reader                                   05/18/26 15:24:35

                                                                   05/18/26 15:24:35
     Open include file: taylor_bar_mesh.k

     Memory required to process keyword     :     195795  
     Additional dynamic memory required     :    2200515  


     input of data is completed

     initial kinetic energy = 0.15528993E+06

     Memory required to begin solution      :     196K
     Additional dynamically allocated memory:    2257K
                                       Total:    2453K

     initialization completed
           1 t 0.0000E+00 dt 6.72E-08 flush i/o buffers            05/18/26 15:24:35
           1 t 0.0000E+00 dt 6.72E-08 write d3plot file            05/18/26 15:24:35
     cpu time per zone cycle............       804 nanoseconds
     average cpu time per zone cycle....       898 nanoseconds
     average clock time per zone cycle..      1144 nanoseconds

     estimated total cpu time          =         0 sec (       0 hrs  0 mins)
     estimated cpu time to complete    =         0 sec (       0 hrs  0 mins)
     estimated total clock time        =         8 sec (       0 hrs  0 mins)
     estimated clock time to complete  =         1 sec (       0 hrs  0 mins)
     termination time                  = 8.000E-05
          60 t 3.9415E-06 dt 6.22E-08 write d3plot file            05/18/26 15:24:35
         155 t 7.9752E-06 dt 2.87E-08 write d3plot file            05/18/26 15:24:35
         349 t 1.1998E-05 dt 1.58E-08 write d3plot file            05/18/26 15:24:35
         697 t 1.5994E-05 dt 9.29E-09 write d3plot file            05/18/26 15:24:35
        1238 t 1.9994E-05 dt 6.27E-09 write d3plot file            05/18/26 15:24:35
        1998 t 2.3998E-05 dt 4.74E-09 write d3plot file            05/18/26 15:24:35
        2943 t 2.7998E-05 dt 3.88E-09 write d3plot file            05/18/26 15:24:35
        4058 t 3.1998E-05 dt 3.18E-09 write d3plot file            05/18/26 15:24:36
        5000 t 3.5037E-05 dt 2.96E-09 flush i/o buffers            05/18/26 15:24:36
        5313 t 3.5998E-05 dt 3.09E-09 write d3plot file            05/18/26 15:24:36
        6657 t 3.9998E-05 dt 2.95E-09 write d3plot file            05/18/26 15:24:36
        8032 t 4.3999E-05 dt 2.91E-09 write d3plot file            05/18/26 15:24:37
        9438 t 4.7999E-05 dt 2.91E-09 write d3plot file            05/18/26 15:24:37
       10000 t 4.9634E-05 dt 2.91E-09 flush i/o buffers            05/18/26 15:24:37
       10861 t 5.1999E-05 dt 2.74E-09 write d3plot file            05/18/26 15:24:37
       12312 t 5.5999E-05 dt 2.74E-09 write d3plot file            05/18/26 15:24:38
       13771 t 5.9998E-05 dt 2.74E-09 write d3plot file            05/18/26 15:24:38
       15000 t 6.3551E-05 dt 2.74E-09 flush i/o buffers            05/18/26 15:24:38
       15163 t 6.3998E-05 dt 2.74E-09 write d3plot file            05/18/26 15:24:38
       16550 t 6.7998E-05 dt 2.91E-09 write d3plot file            05/18/26 15:24:39
       17924 t 7.1999E-05 dt 2.91E-09 write d3plot file            05/18/26 15:24:39
       19360 t 7.6000E-05 dt 2.75E-09 write d3plot file            05/18/26 15:24:39
       20000 t 7.7767E-05 dt 2.76E-09 flush i/o buffers            05/18/26 15:24:40
       20766 t 7.9998E-05 dt 2.93E-09 write d3plot file            05/18/26 15:24:40
 
     *** termination time reached ***
       20766 t 8.0001E-05 dt 2.93E-09 write d3dump01 file          05/18/26 15:24:40
       20766 t 8.0001E-05 dt 2.93E-09 write d3plot file            05/18/26 15:24:40

     N o r m a l    t e r m i n a t i o n                          05/18/26 15:24:40

     Memory required to complete solution   :     196K
     Additional dynamically allocated memory:    2689K
                                       Total:    2884K

     T i m i n g   i n f o r m a t i o n
                            CPU(seconds)   %CPU  Clock(seconds) %Clock
      ----------------------------------------------------------------
      Keyword Processing ... 1.3947E-02    0.27     1.3948E-02    0.11
        KW Reading ......... 5.6257E-03    0.11     5.6270E-03    0.04
        KW Writing ......... 2.6232E-03    0.05     2.6240E-03    0.02
      Initialization ....... 1.1169E-01    2.14     7.6106E+00   59.78
        Init Proc Phase 1 .. 5.4836E-02    1.05     5.6195E-02    0.44
        Init Proc Phase 2 .. 1.1157E-03    0.02     1.7190E-03    0.01
      Element processing ... 3.7857E+00   72.61     3.7860E+00   29.74
        Solids ............. 3.6289E+00   69.60     3.6239E+00   28.46
        Shells ............. 4.6965E-02    0.90     5.1576E-02    0.41
        ISO Shells ......... 1.4989E-02    0.29     1.4982E-02    0.12
        E Other ............ 7.0486E-02    1.35     7.0119E-02    0.55
      Binary databases ..... 2.2995E-02    0.44     2.3203E-02    0.18
      ASCII database ....... 4.1878E-01    8.03     4.1844E-01    3.29
      Contact algorithm .... 3.7245E-02    0.71     3.7472E-02    0.29
      Rigid Bodies ......... 7.1494E-02    1.37     7.1674E-02    0.56
        Mass Scaling ....... 1.8120E-02    0.35     1.8207E-02    0.14
        Update nodes ....... 1.5923E-02    0.31     1.5978E-02    0.13
      Time step size ....... 1.9606E-02    0.38     1.9674E-02    0.15
      Rigid wall ........... 7.2106E-02    1.38     7.0129E-02    0.55
      Group force file ..... 1.6684E-02    0.32     1.7134E-02    0.13
      Others ............... 4.4573E-02    0.85     4.4546E-02    0.35
      Misc. 1 .............. 2.9679E-01    5.69     3.1751E-01    2.49
        Scale Masses ....... 1.5886E-02    0.30     1.6034E-02    0.13
        Force Constraints .. 1.5573E-02    0.30     1.5635E-02    0.12
        Force to Accel ..... 7.6365E-02    1.46     7.5394E-02    0.59
      Misc. 2 .............. 1.6287E-01    3.12     1.6237E-01    1.28
        Geometry Update .... 1.0680E-01    2.05     1.0447E-01    0.82
      Misc. 3 .............. 2.7946E-02    0.54     2.7529E-02    0.22
      Misc. 4 .............. 1.1121E-01    2.13     1.1159E-01    0.88
        Timestep Init ...... 5.0232E-02    0.96     4.9252E-02    0.39
        Apply Loads ........ 2.7356E-02    0.52     2.7557E-02    0.22
      ----------------------------------------------------------------
      T o t a l s            5.2137E+00  100.00     1.2732E+01  100.00

     Problem time       =    8.0001E-05
     Problem cycle      =     20766
     Total CPU time     =         5 seconds (   0 hours  0 minutes  5 seconds)
     CPU time per zone cycle  =        318.622 nanoseconds
     Clock time per zone cycle=        319.828 nanoseconds

     Number of CPU's    1
     NLQ used/max     192/  192
     Start time   05/18/2026 15:24:35  
     End time     05/18/2026 15:24:40  
     Elapsed time       5 seconds for   20766 cycles using  1 SMP thread 
                 (      0 hour   0 minute   5 seconds)

     N o r m a l    t e r m i n a t i o n                          05/18/26 15:24:40
     License option : check ansys licenses only


     ***************************************************************
     *            ANSYS LEGAL NOTICES                              *
     ***************************************************************
     *                                                             *
     * Copyright 1971-2025 ANSYS, Inc.  All rights reserved.       *
     * Unauthorized use, distribution or duplication is            *
     * prohibited.                                                 *
     *                                                             *
     * Ansys is a registered trademark of ANSYS, Inc. or its       *
     * subsidiaries in the United States or other countries.       *
     * See the ANSYS, Inc. online documentation or the ANSYS, Inc. *
     * documentation CD or online help for the complete Legal      *
     * Notice.                                                     *
     *                                                             *
     ***************************************************************
     *                                                             *
     * THIS ANSYS SOFTWARE PRODUCT AND PROGRAM DOCUMENTATION       *
     * INCLUDE TRADE SECRETS AND CONFIDENTIAL AND PROPRIETARY      *
     * PRODUCTS OF ANSYS, INC., ITS SUBSIDIARIES, OR LICENSORS.    *
     * The software products and documentation are furnished by    *
     * ANSYS, Inc. or its subsidiaries under a software license    *
     * agreement that contains provisions concerning               *
     * non-disclosure, copying, length and nature of use,          *
     * compliance with exporting laws, warranties, disclaimers,    *
     * limitations of liability, and remedies, and other           *
     * provisions.  The software products and documentation may be *
     * used, disclosed, transferred, or copied only in accordance  *
     * with the terms and conditions of that software license      *
     * agreement.                                                  *
     *                                                             *
     * ANSYS, Inc. is a UL registered                              *
     * ISO 9001:2015 company.                                      *
     *                                                             *
     ***************************************************************
     *                                                             *
     * This product is subject to U.S. laws governing export and   *
     * re-export.                                                  *
     *                                                             *
     * For U.S. Government users, except as specifically granted   *
     * by the ANSYS, Inc. software license agreement, the use,     *
     * duplication, or disclosure by the United States Government  *
     * is subject to restrictions stated in the ANSYS, Inc.        *
     * software license agreement and FAR 12.212 (for non-DOD      *
     * licenses).                                                  *
     *                                                             *
     ***************************************************************

          Date: 05/18/2026      Time: 15:25:02  
          ___________________________________________________ 
         |                                                   |
         |  LS-DYNA, A Program for Nonlinear Dynamic         |
         |  Analysis of Structures in Three Dimensions       |
         |  Date    : 10/01/2025    Time: 13:03:42           |
         |  Version : smp d R16                              |
         |  Revision: R16.1.1-20-g0c90cad538                 |
         |  AnLicVer: 2025 R2 (20250506+dl-73-g4dde854)      |
         |                                                   |
         |  Features enabled in this version:                |
         |    Shared Memory Parallel                         |
         |    CESE CHEMISTRY EM ICFD STOCHASTIC_PARTICLES    |
         |    FFTW (multi-dimensional FFTW Library)          |
         |    ARPACK (nonsymmetric eigensolver library)      |
         |    ANSYSLIC enabled                               |
         |                                                   |
         |  Platform   : Xeon64 System                       |
         |  OS Level   : Linux 3.10.0 uum                    |
         |  Compiler   : Intel Fortran Compiler 19.0 SSE2    |
         |  Hostname   : d68429355394                        |
         |  Precision  : Double precision (I8R8)             |
         |                                                   |
         |  Unauthorized use infringes Ansys Inc. copyrights |
         |___________________________________________________|

     > i=input.k memory=20m
    Messages file /ansys_inc/v252/licensingclient/language/en-us/ansysli_msgs.xml does not exist.
    [license/info] Successfully checked out 1 of "dyna_solver_core".
    [license/info] --> Checkout ID: d68429355394-root-13-000003 (days left: 246)
    [license/info] --> Customer ID: 0
    [license/info] Successfully started "LSDYNA (Core-based License)".

     Executing with ANSYS license

     Command line options: i=input.k 
                           memory=20m

     Input file: input.k                                                                         

     The native file format       : 64-bit small endian
     Memory size from command line:    20000000

     on UNIX computers note the following change:

     ctrl-c interrupts ls-dyna and prompts for a sense  switch.
     type the desired sense switch: sw1., sw2., etc. to continue
     the execution.  ls-dyna will respond as explained in the users manual

        type                      response
       -----   ------------------------------------------------------------
       quit    ls-dyna terminates.
       stop    ls-dyna terminates.
       sw1.    a restart file is written and ls-dyna terminates.
       sw2.    ls-dyna responds with time and cycle numbers.    
       sw3.    a restart file is written and ls-dyna continues calculations.
       sw4.    a plot state is written and ls-dyna continues calculations.
       sw5.    ls-dyna enters interactive graphics phase.
       swa.    ls-dyna flushes all output i/o buffers.
       swb.    a dynain is written and ls-dyna continues calculations.
       swc.    a restart and dynain are written and ls-dyna continues calculations.
       swd.    a restart and dynain are written and ls-dyna terminates.
       swe.    stop dynamic relaxation just as though convergence
       endtime=time change the termination time
       lpri    toggle implicit lin. alg. solver output on/off.
       nlpr    toggle implicit nonlinear solver output on/off.
       iter    toggle implicit output to d3iter database on/off.
       prof    output timing data to messag and continue.
       conv    force implicit nonlinear convergence for current time step.
       ttrm    terminate implicit time step, reduce time step, retry time step.
       rtrm    terminate implicit at end of current time step.


     ********  notice  ********  notice  ********  notice  ********
     *                                                            *
     * This is the LS-DYNA Finite Element code.                   *
     *                                                            *
     * Neither LST nor the authors assume any responsibility for  *
     * the validity, accuracy, or applicability of any results    *
     * obtained from this system. Users must verify their own     *
     * results.                                                   *
     *                                                            *
     * LST endeavors to make the LS-DYNA code as complete,        *
     * accurate and easy to use as possible.                      *
     * Suggestions and comments are welcomed.  Please report any  *
     * errors encountered in either the documentation or results  *
     * immediately to LST through your site focus.                *
     *                                                            *
     * Copyright (C) 1990-2021                                    *
     * by Livermore Software Technology, LLC                      *
     * All rights reserved                                        *
     *                                                            *
     ********  notice  ********  notice  ********  notice  ********

     Beginning of keyword reader                                   05/18/26 15:25:10

                                                                   05/18/26 15:25:10
     Open include file: taylor_bar_mesh.k

     Memory required to process keyword     :     195795  
     Additional dynamic memory required     :    2200515  


     input of data is completed

     initial kinetic energy = 0.18009957E+06

     Memory required to begin solution      :     196K
     Additional dynamically allocated memory:    2257K
                                       Total:    2453K

     initialization completed
           1 t 0.0000E+00 dt 6.72E-08 flush i/o buffers            05/18/26 15:25:10
           1 t 0.0000E+00 dt 6.72E-08 write d3plot file            05/18/26 15:25:10
     cpu time per zone cycle............       846 nanoseconds
     average cpu time per zone cycle....       895 nanoseconds
     average clock time per zone cycle..      1127 nanoseconds

     estimated total cpu time          =         0 sec (       0 hrs  0 mins)
     estimated cpu time to complete    =         0 sec (       0 hrs  0 mins)
     estimated total clock time        =         8 sec (       0 hrs  0 mins)
     estimated clock time to complete  =         1 sec (       0 hrs  0 mins)
     termination time                  = 8.000E-05
          61 t 3.9737E-06 dt 5.73E-08 write d3plot file            05/18/26 15:25:10
         168 t 7.9894E-06 dt 2.48E-08 write d3plot file            05/18/26 15:25:10
         398 t 1.1989E-05 dt 1.29E-08 write d3plot file            05/18/26 15:25:10
         831 t 1.5993E-05 dt 6.92E-09 write d3plot file            05/18/26 15:25:10
        1528 t 1.9999E-05 dt 4.87E-09 write d3plot file            05/18/26 15:25:10
        2504 t 2.3998E-05 dt 3.41E-09 write d3plot file            05/18/26 15:25:11
        3765 t 2.7999E-05 dt 2.92E-09 write d3plot file            05/18/26 15:25:11
        5000 t 3.1350E-05 dt 2.55E-09 flush i/o buffers            05/18/26 15:25:11
        5259 t 3.2000E-05 dt 2.50E-09 write d3plot file            05/18/26 15:25:11
        7020 t 3.5999E-05 dt 2.12E-09 write d3plot file            05/18/26 15:25:12
        8909 t 3.9998E-05 dt 2.11E-09 write d3plot file            05/18/26 15:25:12
       10000 t 4.2229E-05 dt 2.06E-09 flush i/o buffers            05/18/26 15:25:12
       10865 t 4.3998E-05 dt 2.03E-09 write d3plot file            05/18/26 15:25:13
       12851 t 4.8000E-05 dt 2.01E-09 write d3plot file            05/18/26 15:25:13
       14898 t 5.1999E-05 dt 2.02E-09 write d3plot file            05/18/26 15:25:14
       15000 t 5.2205E-05 dt 2.02E-09 flush i/o buffers            05/18/26 15:25:14
       16946 t 5.5999E-05 dt 2.02E-09 write d3plot file            05/18/26 15:25:14
       19018 t 6.0000E-05 dt 2.02E-09 write d3plot file            05/18/26 15:25:14
       20000 t 6.1904E-05 dt 1.90E-09 flush i/o buffers            05/18/26 15:25:15
       21101 t 6.3999E-05 dt 1.90E-09 write d3plot file            05/18/26 15:25:15
       23112 t 6.7999E-05 dt 2.02E-09 write d3plot file            05/18/26 15:25:15
       25000 t 7.1737E-05 dt 1.90E-09 flush i/o buffers            05/18/26 15:25:16
       25130 t 7.1999E-05 dt 2.02E-09 write d3plot file            05/18/26 15:25:16
       27207 t 7.5999E-05 dt 2.02E-09 write d3plot file            05/18/26 15:25:16
       29235 t 8.0000E-05 dt 2.03E-09 write d3plot file            05/18/26 15:25:17
 
     *** termination time reached ***
       29235 t 8.0002E-05 dt 2.03E-09 write d3dump01 file          05/18/26 15:25:17
       29235 t 8.0002E-05 dt 2.03E-09 write d3plot file            05/18/26 15:25:17

     N o r m a l    t e r m i n a t i o n                          05/18/26 15:25:17

     Memory required to complete solution   :     196K
     Additional dynamically allocated memory:    2689K
                                       Total:    2884K

     T i m i n g   i n f o r m a t i o n
                            CPU(seconds)   %CPU  Clock(seconds) %Clock
      ----------------------------------------------------------------
      Keyword Processing ... 1.4338E-02    0.20     1.4339E-02    0.10
        KW Reading ......... 5.6621E-03    0.08     5.6630E-03    0.04
        KW Writing ......... 2.6507E-03    0.04     2.6510E-03    0.02
      Initialization ....... 1.1128E-01    1.57     7.6072E+00   52.09
        Init Proc Phase 1 .. 5.4687E-02    0.77     5.6129E-02    0.38
        Init Proc Phase 2 .. 1.0162E-03    0.01     1.9070E-03    0.01
      Element processing ... 5.3144E+00   74.97     5.3146E+00   36.39
        Solids ............. 5.0953E+00   71.88     5.0885E+00   34.84
        Shells ............. 6.5479E-02    0.92     7.1968E-02    0.49
        ISO Shells ......... 2.1049E-02    0.30     2.1156E-02    0.14
        E Other ............ 9.8593E-02    1.39     9.7604E-02    0.67
      Binary databases ..... 2.9926E-02    0.42     3.0185E-02    0.21
      ASCII database ....... 4.3547E-01    6.14     4.3545E-01    2.98
      Contact algorithm .... 5.2021E-02    0.73     5.2286E-02    0.36
      Rigid Bodies ......... 1.0054E-01    1.42     1.0077E-01    0.69
        Mass Scaling ....... 2.5300E-02    0.36     2.5292E-02    0.17
        Update nodes ....... 2.2428E-02    0.32     2.2490E-02    0.15
      Time step size ....... 2.7005E-02    0.38     2.7228E-02    0.19
      Rigid wall ........... 1.0286E-01    1.45     1.0009E-01    0.69
      Group force file ..... 2.3430E-02    0.33     2.3859E-02    0.16
      Others ............... 6.2025E-02    0.87     6.1774E-02    0.42
      Misc. 1 .............. 3.9758E-01    5.61     4.2007E-01    2.88
        Scale Masses ....... 2.2239E-02    0.31     2.2558E-02    0.15
        Force Constraints .. 2.1598E-02    0.30     2.1633E-02    0.15
        Force to Accel ..... 1.0626E-01    1.50     1.0532E-01    0.72
      Misc. 2 .............. 2.2612E-01    3.19     2.2558E-01    1.54
        Geometry Update .... 1.4803E-01    2.09     1.4584E-01    1.00
      Misc. 3 .............. 3.8154E-02    0.54     3.7604E-02    0.26
      Misc. 4 .............. 1.5357E-01    2.17     1.5418E-01    1.06
        Timestep Init ...... 6.9994E-02    0.99     6.8722E-02    0.47
        Apply Loads ........ 3.6994E-02    0.52     3.7575E-02    0.26
      ----------------------------------------------------------------
      T o t a l s            7.0887E+00  100.00     1.4605E+01  100.00

     Problem time       =    8.0002E-05
     Problem cycle      =     29235
     Total CPU time     =         7 seconds (   0 hours  0 minutes  7 seconds)
     CPU time per zone cycle  =        309.724 nanoseconds
     Clock time per zone cycle=        310.640 nanoseconds

     Number of CPU's    1
     NLQ used/max     192/  192
     Start time   05/18/2026 15:25:10  
     End time     05/18/2026 15:25:17  
     Elapsed time       7 seconds for   29235 cycles using  1 SMP thread 
                 (      0 hour   0 minute   7 seconds)

     N o r m a l    t e r m i n a t i o n                          05/18/26 15:25:17

    Text(0, 0.5, 'Energy (mJ)')



.. GENERATED FROM PYTHON SOURCE LINES 242-245

Generate graphical output
~~~~~~~~~~~~~~~~~~~~~~~~~
etc etc

.. GENERATED FROM PYTHON SOURCE LINES 245-247

.. code-block:: Python


    plt.show()



.. image-sg:: /examples/Taylor_Bar/images/sphx_glr_plot_taylor_bar_002.png
   :alt: plot taylor bar
   :srcset: /examples/Taylor_Bar/images/sphx_glr_plot_taylor_bar_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (2 minutes 20.307 seconds)


.. _sphx_glr_download_examples_Taylor_Bar_plot_taylor_bar.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_taylor_bar.ipynb <plot_taylor_bar.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_taylor_bar.py <plot_taylor_bar.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_taylor_bar.zip <plot_taylor_bar.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
